# Simple-ELRS-surface-radio-modification

./: .gitignore  CLAUDE.md  CMakeLists.txt  cal_gui.py  drive_gui.py  generate_schematic.py  status.md
debug_pwm_reader/: CMakeLists.txt  README.md  main.c
src/: adc.c  adc.h  buttons.c  buttons.h  calibrate.h  config.h  crsf.c  crsf.h  display.c  display.h  encoder.c  encoder.h  hardware_config.h  ina219.h  led.c  led.h  main.c  menu.c  menu.h  mixer.c  mixer.h  screen.c  screen.h  shared.c  shared.h  ws2812.pio
src/unused/: calibrate.c  config.c  encoder.pio  ina219.c  oled.c  oled.h  pages.c  pages.h
